--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "steam-totp": "^2.1.1",
     "steam-tradeoffer-manager": "^2.10.4",
     "steam-user": "^4.20.2",
-    "steamcommunity": "^3.44.0"
+    "steamcommunity": "^3.44.0",
+    "steamid": "^2.0.0"
   }
 }
